# runtime

./: CONTRIBUTING.md  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  build.sh  download_3rd_party.py  pre-smoking-testcase
cmake/device/: CMakeLists.txt
cmake/stub/: CMakeLists.txt
example/0_quickstart/0_hello_cann/: CMakeLists.txt  README.md
example/0_quickstart/4_custom_kernel_launch/: CMakeLists.txt  README.md  main.cpp  vector_add_kernel.cpp
example/1_basic_features/device/0_device_normal/: CMakeLists.txt  README.md
src/acl/acl_tdt_channel/: CMakeLists.txt  tensor_data_transfer.cpp
src/acl/aclrt/: CMakeLists.txt  acl_rt_headers.cmake
src/aicpu_sched/aicpu_cust_schedule/: CMakeLists.txt
src/aicpu_sched/aicpu_processer/: CMakeLists.txt
src/aicpu_sched/aicpu_schedule/: CMakeLists.txt
src/aicpu_sched/aicpu_schedule/common/: aicpusd_args_parser.cpp  aicpusd_args_parser.h  aicpusd_feature_ctrl.h  aicpusd_feature_ctrl_open_source.cpp  aicpusd_sqe_adapter.cpp  feature_ctrl_common.cpp
src/aicpu_sched/aicpu_schedule/common/ts_to_aicpu_msg_adapter/: ts_msg_adapter.cpp
src/aicpu_sched/aicpu_schedule/core/: aicpusd_event_manager.cpp  aicpusd_event_manager.h  aicpusd_interface_process.cpp  aicpusd_interface_process.h  aicpusd_message_queue.cpp  aicpusd_model.cpp  aicpusd_model.h  aicpusd_model_execute.cpp  aicpusd_model_execute.h  aicpusd_msq_operator_manager.cpp  aicpusd_msq_operator_manager.h  aicpusd_queue_event_process.cpp  aicpusd_threads_process.cpp  aicpusd_threads_process.h
src/aicpu_sched/aicpu_schedule/datadump/: datadump_interface.cpp  datadump_interface_process.cpp  datadump_threads_process.cpp
src/aicpu_sched/aicpu_schedule/execute/: main.cpp
src/aicpu_sched/aicpu_schedule/interface/: aicpusd_interface.cpp  aicpusd_sub_module_interface.cpp
src/aicpu_sched/aicpu_schedule/stub/: lhisi.cpp
src/dfx/msprof/collector/dvvp/adprof/closed/: CMakeLists.txt
src/dfx/trace/: CMakeLists.txt  atrace_headers.cmake
src/dfx/trace/atrace/utrace/stacktrace/: stacktrace_common.h  stacktrace_dumper.c  stacktrace_exec.c  stacktrace_logger.c  stacktrace_logger.h  stacktrace_signal.c
src/dfx/trace/atrace/utrace/stacktrace/stacktrace_dumper/: scd_core.c
src/platform/: CMakeLists.txt  platform_info.cpp  platform_infos_def.cpp  platform_infos_utils.cpp  platform_manager_v2.cpp
src/platform/platform_config/cann/: Ascend031.ini  Ascend035.ini  Ascend035A.ini  Ascend035B.ini  Ascend310B1.ini  Ascend310B2.ini  Ascend310B3.ini  Ascend310B4.ini  Ascend310P1.ini  Ascend310P3.ini  Ascend310P5.ini  Ascend310P7.ini  Ascend910A.ini  Ascend910B.ini  Ascend910B1.ini  Ascend910B2.ini  Ascend910B2C.ini  Ascend910B3.ini  Ascend910B4-1.ini  Ascend910B4.ini  Ascend910PremiumA.ini  Ascend910ProA.ini  Ascend910ProB.ini  Ascend910_9362.ini  Ascend910_9372.ini  Ascend910_9381.ini  Ascend910_9382.ini  Ascend910_9391.ini  Ascend910_9392.ini
src/platform/platform_config/cann-dev/: Ascend350_354f.ini  Ascend350_355e.ini  Ascend950DT_950x.ini  Ascend950DT_950y.ini  Ascend950DT_9571.ini  Ascend950DT_9572.ini  Ascend950DT_9573.ini  Ascend950DT_9574.ini  Ascend950DT_9575.ini  Ascend950DT_9576.ini  Ascend950DT_9577.ini  Ascend950DT_9578.ini  Ascend950DT_9581.ini  Ascend950DT_9582.ini  Ascend950DT_9582x.ini  Ascend950DT_9583.ini  Ascend950DT_9584.ini  Ascend950DT_9585.ini  Ascend950DT_9586.ini  Ascend950DT_9587.ini  Ascend950DT_9588.ini  Ascend950DT_9591.ini  Ascend950DT_9592.ini  Ascend950DT_9595.ini  Ascend950DT_9596.ini  Ascend950DT_95A1.ini  Ascend950DT_95A2.ini  Ascend950PR_950z.ini  Ascend950PR_9579.ini  Ascend950PR_957b.ini  Ascend950PR_957bx.ini  Ascend950PR_957c.ini  Ascend950PR_957d.ini  Ascend950PR_9589.ini  Ascend950PR_958b.ini  Ascend950PR_9599.ini
src/platform/platform_config/kirin/: Kirin9030.ini  KirinX90.ini
src/tsd/tsdclient/: CMakeLists.txt
src/tsd/tsdclient/inc/: client_manager.h  process_mode_manager.h
src/tsd/tsdclient/src/: process_mode_base.cpp  process_mode_manager.cpp
tests/cmodel_test/: CMakeLists.txt  check_runtime_cmodel_undefined_symbols.sh
tests/depends/runtime/: CMakeLists.txt
tests/ut/aicpu_sched/: CMakeLists.txt
tests/ut/aicpu_sched/aicpu_schedule/st/: CMakeLists.txt
tests/ut/aicpu_sched/aicpu_schedule/st/testcase/: aicpu_schedule_test.cc  aicpu_thread_datadump_test.cc  aicpusd_args_parser_test.cc  aicpusd_interface_process_test.cc  aicpusd_model_execute_test.cc  aicpusd_stub_lhisi_test.cc
tests/ut/aicpu_sched/aicpu_schedule/ut/: CMakeLists.txt
tests/ut/aicpu_sched/aicpu_schedule/ut/testcase/: aicpu_schedule_test.cc  aicpu_thread_datadump_test.cc  aicpusd_interface_process_test.cc  aicpusd_lhisi_coverage_test.cc  aicpusd_message_queue_test.cc  aicpusd_model_execute_test.cc  aicpusd_msq_operator_manager_test.cc  aicpusd_msq_operator_stub.h  aicpusd_stub_lhisi_test.cc  aicpusd_sub_module_interface_test.cc  aicpusd_work_test.cc
tests/ut/aicpu_sched/aicpu_schedule/ut/testcase/operator_kernel/: operator_kernel_stub.cpp  operator_kernel_stub.h
tests/ut/msprof/job_wrapper/: CMakeLists.txt
tests/ut/msprof/job_wrapper/test/: collection_register_utest.cpp  prof_biu_perf_utest.cpp  prof_job_ccu_utest.cpp  prof_job_utest.cpp  prof_peripheral_job_utest.cpp  prof_timer_utest.cpp
tests/ut/msprof/msprof/: CMakeLists.txt
tests/ut/msprof/msprof/test/: feature_manager_utest.cpp  platform_utest.cpp  prof_acl_core_utest.cpp  sigint_handler_utest.cpp
tests/ut/runtime/runtime/test/platform/: CMakeLists.txt
tests/ut/runtime/runtime/test/platform/910B/: CMakeLists.txt  rt_api_test.cc  rt_utest_FftsPlustTaskLaunch.cc  rt_utest_aicpu_err_msg.cc  rt_utest_api.cc  rt_utest_api_910b.cc  rt_utest_api_impl.cc  rt_utest_api_impl_spec.cc  rt_utest_api_memory.cc  rt_utest_api_others.cc  rt_utest_api_test.cc  (+11 more)
tests/ut/slog/ut/ep/log_daemon/: CMakeLists.txt
tests/ut/slog/ut/ep/slogd/: CMakeLists.txt
tests/ut/tsd/tsdclient/: CMakeLists.txt
tests/ut/tsd/tsdclient/test/: common_util_func.cpp  device_comm_utest.cpp  hdc_client_utest.cpp  hdc_common_utest.cpp  package_worker_utest.cpp  process_manager_utest.cpp  tsdclient_utest.cpp
(+631 files in other folders)
