# -----------------------------------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# -----------------------------------------------------------------------------------------------------------

############ libacl_tdt_channel.so ############
add_library(acl_tdt_channel SHARED
    tensor_data_transfer.cpp
    ../utils/file_utils.cpp
)

set(ACL_INC_EXTERNAL_DIR ${CMAKE_CURRENT_LIST_DIR}/../../../include/external)

target_include_directories(acl_tdt_channel PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}
    ${CMAKE_CURRENT_LIST_DIR}/..
    ${CMAKE_CURRENT_LIST_DIR}/../common
    ${CMAKE_CURRENT_LIST_DIR}/../aclrt_impl
    ${ACL_INC_EXTERNAL_DIR}
    ${CMAKE_BINARY_DIR}/include_acl/tdt
    ${RUNTIME_DIR}/pkg_inc/runtime/runtime
 	${RUNTIME_DIR}/src/inc
 	${RUNTIME_DIR}/src/inc/tdt
)

target_compile_options(acl_tdt_channel PRIVATE
    -fvisibility=hidden -O2 -Werror -fno-common
    -ftrapv
)

target_compile_definitions(acl_tdt_channel PRIVATE
    _FORTIFY_SOURCE=2
    OS_TYPE=0
    FUNC_VISIBILITY
)

target_link_options(acl_tdt_channel PRIVATE
    -rdynamic
    -Wl,-Bsymbolic
    -Wl,--exclude-libs,ALL
    -Wl,--no-undefined
)

target_link_libraries(acl_tdt_channel PRIVATE
    $<BUILD_INTERFACE:intf_pub>
    $<BUILD_INTERFACE:c_sec_headers>
    $<BUILD_INTERFACE:msprof_headers>
    acl_rt_impl
    mmpa
    runtime
    c_sec
    unified_dlog
    -Wl,--as-needed
    -ldl
    -lpthread
)

add_dependencies(acl_tdt_channel copy_acl_headers_and_libs)
